@@ -130,7 +130,7 @@ static void update_tree_cb(FolderView *folderview, guint action,
 {
 	FolderItem *item;
 
-	item = folderview_get_selected(folderview);
+	item = folderview_get_selected_item(folderview);
 	g_return_if_fail(item != NULL);
 
 	summary_show(folderview->summaryview, NULL);
@@ -243,7 +243,7 @@ static void remove_mailbox_cb(FolderView *folderview, guint action, GtkWidget *w
 	gchar *message;
 	AlertValue avalue;
 
-	item = folderview_get_selected(folderview);
+	item = folderview_get_selected_item(folderview);
 	g_return_if_fail(item != NULL);
 	g_return_if_fail(item->folder != NULL);
 	if (folder_item_parent(item)) return;
@@ -274,7 +274,7 @@ static void delete_folder_cb(FolderView *folderview, guint action,
 	gchar *old_path;
 	gchar *old_id;
 
-	item = folderview_get_selected(folderview);
+	item = folderview_get_selected_item(folderview);
 	g_return_if_fail(item != NULL);
 	g_return_if_fail(item->path != NULL);
 	g_return_if_fail(item->folder != NULL);
@@ -320,7 +320,7 @@ static void move_folder_cb(FolderView *folderview, guint action, GtkWidget *widg
 {
 	FolderItem *from_folder = NULL, *to_folder = NULL;
 
-	from_folder = folderview_get_selected(folderview);
+	from_folder = folderview_get_selected_item(folderview);
 	if (!from_folder || from_folder->folder->klass != maildir_get_class())
 		return;
 
@@ -343,7 +343,7 @@ static void rename_folder_cb(FolderView *folderview, guint action,
 	gchar *new_id;
 	gchar *p;
 
-	item = folderview_get_selected(folderview);
+	item = folderview_get_selected_item(folderview);
 	g_return_if_fail(item != NULL);
 	g_return_if_fail(item->path != NULL);
 	g_return_if_fail(item->folder != NULL);
